give a code also

--- a/01.html
+++ b/01.html
@@ -10,6 +10,7 @@
 
     <div class="container">
         <div class="change_colour">Click Me</div>
+        <div class="colur_code">colour code : #0000</div>
     </div>
 
     <script src="01.js"></script>
